@@ -76,6 +76,11 @@ proc dg-require { args } {
         # Mark the test as unsupported
         set do-what [list [lindex do-what 0] N P]
     }
+    if {[lindex $args 1] == "devnull" \
+            && ! [file exists "/dev/null"]} {
+        # Mark the test as unsupported
+        set do-what [list [lindex do-what 0] N P]
+    }
     if {[lindex $args 1] == "nbd" \
             && $::env(NBDKIT) == "no"} {
         # Mark the test as unsupported
